Trino-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ui
  namespace: dados
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - trino.dev.nexu.cloud
    secretName: trino-tls
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
   - host: trino.dev.nexu.cloud
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-trino
            port:
              number: 8080
